# toedirs

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.musl  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  fly.toml  rust-toolchain.toml  toedi.toml
.github/workflows/: fly_deploy.yml  release.yml  test.yaml
.sqlx/: query-11090e8d74d84e96f0b4aa81a9d38bdcaeb5459b70e8bc54a0e460da07851ff3.json  query-1212ef0ac44798646a1a41ddd518fa6fa3090e61ba0d9e8168e04faba8fd97a1.json  query-19dbad1676c70e47b9bde1a8040d708e3e93df7d4e05df4097ba10c433e6a8f3.json  query-2af78bd1bc6d7e6f8886eda3f945e81c383eb6df91e66e7ce17ed22348ed8a13.json  query-34c91e973527426b4f78aeb26480d30736b648a1676d0af1c907d0094423b995.json  query-36358613061892d018a30bdb912ce8c8b4da9f810f0c3d5ea6ab971788cd2f8e.json  query-3cecc874199c0114a8e413839af32fcd5c9eb260861e04bdfaed3d7f0bf2c8cd.json  query-4d2f5611020cd9d2b50cead21d38a1308c85a06ded553085e7fc002dda3fc1ba.json  query-4ed46429de8ba681588bd93f428989107759eca08023767518dc22dc18dff399.json  query-5aeea998184a04928d35da639c52d2560d1956060dc4368d30c24a45766ef8c4.json  query-5d1e77b0898cfa2a76010334607c56a0d1445c28619976014800cd70e0458f22.json  query-5d7954679ff76977a2943b418b22b0a1956be1aabd7dbf8a278fa6e82964ac6c.json  query-5f6b2756fc631b4a2f414fc77825fef768955e8fad76d4a068153569f5a3e9cc.json  query-629ebe8f36c7c8530428982c11625ef957f16b25a9b790d63905df831a17d06e.json  query-691f4e02e58e8b2c4ac8b0a44922c2b953104d2e4bdd0eb94c96b5ee6263f84b.json  query-6d5991e83413535117c71241718fe6b68e9d490ca13098bc133412c8c9468f9c.json  query-712371cc778e2f88d773d72abba18dd01768c44167aa8badfbf9d2f0233429e8.json  query-7a713830d8acf8b1d2abf3eead4b35790817ae50a3dc1477cfddf9273f6bb0bc.json  query-7d2fc52106d22dc5c1487cc2005c43a350dc7bd6805b1f7b6350970da30367ae.json  query-7f1b3c98fd4ae9238fc7658b3a9dc28039734dcc63f924f6c10dac262578d988.json  query-841df8f6ee7c59ca99684d00eeae51353c17fc09a8b1dd120db0a5020ef32399.json  query-8b48dc24e494f05c74589b640be9fcc9ea26a77340ab1f3415f359335be83490.json  query-905ead24b20a2717fa210b8f76933422dd54f257db4c8cd1e2a9f151c1a1a585.json  query-90d39e635ebd1f1f4895544fb2e6a8d998b079afc0074bb9a5e961da1b9ba21f.json  query-91409a49c001fc04b3a5258b618a0ad5d610eb5a955ea0bd0e1b3ba4c17ed639.json  query-94f2764fec96ddd7a34d4449efc8609933948bc0b269e86f9e1e55426b33c725.json  query-9946dfb6797d37e3c6b6f4329eb9b9224a45856c3e05ac9fef4b809ae4737321.json  query-a661c4c4034654e4f39e20d6642168fc88d9e496bf232f5efebc54be95be25a7.json  query-bc69d2d9af0740848d3ef79b5f5e71b47ecff7393eb64f1a926c036fca99d641.json  query-c56c71e173a98c5d4122f9c52ed8a1be4dce826c01b31d228d7675e778ea7dbc.json  query-d5384d26596dddf3fff2d69b17da04b7399984b79e6c2745e34b0a1d3dd2ca77.json  query-d7c62f71941b623aa4dc01e9d7eb6acca186b003c54206514b51b1da9bcf889e.json  query-d984506e1c04faeccc7f6f00c137702f60294bd0e97be06f29bac93bcdf11a6a.json  query-de69db49c1c3db2fa10d2ac49d990150710aae073b2203287272d728a2ef2f32.json  query-e0dc38cbbb82c963d4b46b8fd6a257039739dcda4b260f12bf48a23c67710177.json  query-e31befa30cd1c981b64f06c5376cc883d470890626eda443a8290dfab221b6c8.json  query-e73470f35ba2e8e7d63f5c66037aec4d7f3df4d0395ddcd76b16c0c70bc81ab6.json  query-e99921c7e36309259873ec4b886a3d7af4a82c87add116488c31245409f0cef3.json  query-f17d0081ce63cd30982953688252c10a444f5418c4a18c3b8597348e192698e7.json
end2end/: playwright.config.ts
end2end/tests/: landing_page.spec.ts
leptos_charts/: Cargo.toml
leptos_charts/src/: lib.rs
migrations/: 20230922083224_initial_setup.down.sql  20230922083224_initial_setup.up.sql  20240107152955_add_workout_template.down.sql  20240107152955_add_workout_template.up.sql  20240117191147_add_workout_instance.down.sql  20240117191147_add_workout_instance.up.sql  20240401124017_add_indices.down.sql  20240401124017_add_indices.up.sql  20240401171108_add_user-preferences.down.sql  20240401171108_add_user-preferences.up.sql  20240406103037_add_user-preferences_params.down.sql  20240406103037_add_user-preferences_params.up.sql  20240407160821_add_workout_rule_exclusion_dates.down.sql  20240407160821_add_workout_rule_exclusion_dates.up.sql  20240828175332_add-slope-speed-table.down.sql  20240828175332_add-slope-speed-table.up.sql
resources/: sources.md  workout_planner.md
src/: activity_list.rs  app.rs  auth.rs  authentication.rs  config.rs  date_picker_dialog.rs  error_template.rs  fileserv.rs  fit_upload.rs  heartrate_summary_chart.rs  lib.rs  main.rs  models.rs  training_load_chart.rs  workout_schedule.rs
src/activity_overview/: activity_details.rs  mod.rs
src/elements/: select.rs
src/models/: activity.rs  base.rs  lap.rs  mod.rs  record.rs  session.rs  slope_speed.rs  user_preferences.rs
src/pages/: home.rs  landing.rs  mod.rs
src/pages/activity_overview/: activity_details.rs  mod.rs
src/pages/auth/: login.rs  signup.rs
src/pages/fit_upload/: mod.rs
src/pages/overview/: fitness_level_chart.rs  heartrate_distribution_chart.rs  heartrate_summary_chart.rs  mod.rs  slope_speed_chart.rs  training_load_chart.rs
src/pages/user/: mod.rs
src/pages/workout_schedule/: add_template_dialog.rs  add_workout_dialog.rs  mod.rs
src/user/: mod.rs
src/workout_schedule/: add_template_dialog.rs  add_workout_dialog.rs  mod.rs
style/: bulma.sass  custom.scss  materialize.scss  output.css  variables.scss
style/components/: _buttons.scss  _chips.scss  _collapsible.scss  _global.scss  _icons-material-design.scss  _modal.scss  _tooltip.scss  _variables.scss
style/components/forms/: _range.scss  _switches.scss
style/fontawesome/: _larger.scss  _list.scss  _variables.scss
toedirs/: Cargo.toml
toedirs/migrations/: 20230922083224_initial_setup.down.sql  20230922083224_initial_setup.up.sql
toedirs/src/: app.rs  auth.rs  fileserv.rs  fit_upload.rs  lib.rs  main.rs  models.rs  state.rs
toedirs/style/components/: _modal.scss
