[workspace]

members = ["toedirs", "leptos_charts"]
resolver = "2"

[workspace.dependencies]
leptos = { version = "0.5.0", features = ["nightly"] }
leptos_charts = { path = "./leptos_charts", version = "0.1.0" }

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

