[package]
name = "toedirs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
async-trait = { version = "0.1.73", optional = true }
axum_session_auth = { version = "0.12.0", features=["postgres-rustls"], optional = true }
axum_session = { version = "0.12.0", features=["postgres-rustls"], optional = true }
axum = { version = "0.7", features = ["multipart","macros"], optional = true }
bcrypt = { version = "0.15.0", optional = true }
bigdecimal = { version = "0.3.1", features = ["serde"] }
bytes = "1"
cfg-if = "1"
chrono = "0.4.31"
console_error_panic_hook = "0.1"
console_log = "1"
figment = {version = "0.10.10", features=["env", "toml"], optional = true}
fitparser = "0.6.0"
futures-util = {version = "0.3.28", optional = true}
http = "1"
itertools = "0.11.0"
leptos_axum = { version = "0.6.0", optional = true }
leptos_charts = {git = "https://github.com/Panaetius/leptos_charts.git"}
leptos_meta = { version = "0.6.0", features = ["nightly"] }
leptos_router = { version = "0.6.0", features = ["nightly"] }
leptos-use = { version = "0.10.1"}
leptos = { version = "0.6.0", features = ["nightly"] }
log = "0.4"
once_cell = { version="1.18.0", optional = true }
rrule = "0.11.0"
sentry = { version = "0.32.1", features = ["anyhow", "tower", "tower-http", "tower-axum-matched-path"], optional= true}
serde = { version = "1.0", features = ["derive"] }
simple_logger = "4"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "bigdecimal"], optional = true }
strum = { version = "0.25.0", features = ["strum_macros", "derive"] }
thaw = {version = "0.1.6" , default-features = false, optional=true}
thiserror = "1.0.38"
tokio-util = { version = "0.7.8", features = ["io"] }
tokio = { version = "1.25.0", optional = true }
tower-http = { version = "0.5", features = ["fs"], optional = true }
tower = { version = "0.4.13", optional = true }
tracing = { version = "0.1.37", optional = true }
wasm-bindgen = "^0.2.89"
web-sys = {version="0.3.66",features=["DataTransfer"]}

[patch.crates-io]
thaw = {git="https://github.com/Panaetius/thaw"}#{ path = "../thaw/thaw"}

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "leptos_charts/hydrate","thaw/hydrate" ]
ssr = [
  "dep:axum",
  "dep:tokio",
  "dep:tower",
  "dep:tower-http",
  "dep:leptos_axum",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos_charts/ssr",
  "dep:tracing",
  "dep:futures-util",
  "dep:sqlx",
  "dep:once_cell",
  "dep:figment",
  "dep:axum_session",
  "dep:axum_session_auth",
  "dep:bcrypt",
  "dep:async-trait",
  "thaw/ssr",
  "leptos-use/ssr",
  "leptos-use/axum",
  "sentry"
]
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "toedirs"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/materialize.scss"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = false

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
