[package]
name = "leptos_charts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { workspace = true, features = ["nightly"] }
leptos-use = { version = "0.7.1" }
num-traits = { version = "0.2.16" }

[features]
hydrate = ["leptos/hydrate"]
ssr = [
  "leptos/ssr",
  "leptos-use/ssr"
]
